Improved private events and fixed monthly private events Fixed private events in monthly view not showing the title, made Private show in italics to indicate it is not a normal title, fixed being able to view overlay for private evens in monthly view, and added color to private category to make it more distinct (so it is not the same as the no color specified color)

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -776,8 +776,8 @@ input[readonly="readonly"]
 	.sch-month-evnt
 	{
 		margin: 0px 2px 4px 2px;
-		color: white;
 		position: relative;
+		color: grey;
 		border-left: solid 3px;
 		padding-left: 5px;
 		background: white;
